fix: qr code validation
